@@ -7,10 +7,11 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.util.stream.Stream;
 
 import VASSAL.Info;
 import VASSAL.tools.io.IOUtils;
-import java.util.stream.Stream;
 
 public class BugUtils {
 
@@ -80,19 +81,17 @@ public class BugUtils {
     return summary;
   }
 
-
 // FIXME: move this somewhere else?
   public static String getErrorLog() {
-    String log = null;
-    final File f = Info.getErrorLogPath();
-    try (FileReader r = new FileReader(f, Charset.defaultCharset())) {
-      log = IOUtils.toString(r);
+    try {
+      return Files.readString(
+        Info.getErrorLogPath().toPath(), Charset.defaultCharset()
+      );
     }
     catch (IOException e) {
       // Don't bother logging this---if we can't read the errorLog,
       // then we probably can't write to it either.
+      return null;
     }
-
-    return log;
   }
 }
